broke the main page nav bar - colors are weird

--- a/about.html
+++ b/about.html
@@ -7,21 +7,14 @@
     <link href='https://fonts.googleapis.com/css?family=Anaheim' rel='stylesheet'>
   </head>
   <body>
-    <nav id="navbar">
+    <nav id="about-navbar">
+      <a href=./index.html><img src="images/web_hi_res_512.png"></a>
       <a href="./about.html">Deskription/About</a>
       <a href="./portfolio.html">Impieso/Projects</a>
       <a href="./code-journal.html">Eskritura/Journal</a>
       <a href="./contact.html">Agangi/Contact</a>
       <script>
-      window.onscroll = function() {scrollFunction()};
 
-      function scrollFunction() {
-        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-          document.getElementById("navbar").style.top = "0";
-        } else {
-          document.getElementById("navbar").style.top = "-50px";
-        }
-      }
       </script>
     </nav>
 
