fixed the about nav bar, now has icon

--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>About TS</title>
-    <link href="./styles/style.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
+    <link href="styles/about.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Anaheim' rel='stylesheet'>
   </head>
   <body>
