updated content for layout testing

--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
     </nav>
 
     <main>
-      <header>
+      <header class = "container">
         <h1 class="animated bounceInDown">Tor Shimizu</h1>
       </header>
       <article>
@@ -35,7 +35,7 @@
         <ul>
           <li>Rock Climbing</li>
           <li>Crafting</li>
-          <li>Beer Brewing</li>
+          <li>Beer</li>
           <li>Reading</li>
         </ul>
         <br>
@@ -61,5 +61,17 @@
           My Fourth paragraph!
         </p>
     </article>
+
+    <footer id="footer">
+      <article>
+        <div id = "about">
+          <h3>About</h3>
+          <div id = "about-blocks">
+          <p>Full stack software developer in training.</p>
+          <p>Guammie Bear. Climber. Beer enthusiast. Jockiest nerd you'll ever meet.</p>
+          </div>
+        </div>
+      </article>
+    </footer>
   </body>
 </html>
