added parallax scrolling and changed header position. some work on navbar

--- a/html/index.html
+++ b/html/index.html
@@ -3,33 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>Tor Shimizu:Full Stack Web Dev</title>
-    <link href="../styles/style.css" rel="stylesheet">
+    <link href="../styles/main.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Anaheim' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   </head>
-  <body>
-    <nav id="navbar">
-      <a href="about.html">Deskription/About</a>
-      <a href="portfolio.html">Impieso/Projects</a>
-      <a href="code-journal.html">Eskritura/Journal</a>
-      <a href="contact.html">Agangi/Contact</a>
-      <script>
-      window.onscroll = function() {scrollFunction()};
 
-      function scrollFunction() {
-        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-          document.getElementById("navbar").style.top = "0";
-        } else {
-          document.getElementById("navbar").style.top = "-50px";
-        }
-      }
-      </script>
+  <body>
+    <nav>
+      <a href="https://torshimizu.github.io/">torshimizu</a>
+      <a href="about.html">Deskription/About</a>
+      <a href="https://github.com/torshimizu">Impieso/Projects</a>
+      <a href="code-journal.html">Eskritura/Journal</a>
     </nav>
 
-    <main>
-      <header class = "container">
-        <h1 class="animated bounceInDown">Tor Shimizu</h1>
+
+    <main class="container">
+
+      <header id="splat">
+        <h1 class="animated fadeIn">Tor Shimizu</h1>
+        <sub>A Chamorro full stack developer</sub>
       </header>
+
       <article>
         <p>I do things like:</p>
         <ul>
@@ -39,7 +33,9 @@
           <li>Reading</li>
         </ul>
         <br>
+      </article>
 
+      <article>
         <p>What's it like growing up on Guam?</p>
         <ul>
           <li>Stifling</li>
@@ -48,6 +44,7 @@
           <li>Family-orineted</li>
           <li>Filling!</li>
         </ul>
+      </article>
 
         <br>
 
