added css for second background image

--- a/html/index.html
+++ b/html/index.html
@@ -35,8 +35,11 @@
         <br>
       </article>
 
+      <aside id="bg2">
+        <span>What's it like growing up on Guam?</span>
+      </aside>
+
       <article>
-        <p>What's it like growing up on Guam?</p>
         <ul>
           <li>Stifling</li>
           <li>...but relaxing</li>
