changed the link to the main page

--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <nav>
-      <a href="https://torshimizu.github.io/">torshimizu</a>
+      <a href="index.html">torshimizu</a>
       <a href="about.html">Deskription/About</a>
       <a href="https://github.com/torshimizu">Impieso/Projects</a>
       <a href="code-journal.html">Eskritura/Journal</a>
