updated text and formatted what is chamorro section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tor Shimizu:Full Stack Web Dev</title>
-    <link href="../styles/main.css" rel="stylesheet">
+    <link href="styles/main.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Anaheim' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   </head>
@@ -11,9 +11,9 @@
   <body>
     <nav>
       <a href="index.html">torshimizu</a>
-      <a href="about.html">Deskription/About</a>
+      <a href="html/about.html">Deskription/About</a>
       <a href="https://github.com/torshimizu">Impieso/Projects</a>
-      <a href="code-journal.html">Eskritura/Journal</a>
+      <a href="html/code-journal.html">Eskritura/Journal</a>
     </nav>
 
 
@@ -25,19 +25,13 @@
       </header>
 
       <article>
-        <p>I do things like:</p>
-        <ul>
-          <li>Rock Climbing</li>
-          <li>Crafting</li>
-          <li>Beer</li>
-          <li>Reading</li>
-        </ul>
-        <br>
+        <p>&lt;What is Chamorro?&gt;</p>
+        <p>Chamorro is the name of the native people of <span>Guam</span>. It is also the the language we speak.</p>
       </article>
 
-      <aside id="bg2">
+      <section id="bg2">
         <span>What's it like growing up on Guam?</span>
-      </aside>
+      </section>
 
       <article>
         <ul>
