added starter html to portfolio

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <article>
         <p>&lt;What is Chamorro?&gt;</p>
-        <p>Chamorro is the name of the native people of <span>Guam</span>. It is also the the language we speak.</p>
+        <p>Chamorro is the name of the native people of <span>Guam</span>. It is also the the native language of the island. However, Chamorro is a dying l</p>
       </article>
 
       <section id="bg2">
