starter code for Portfolio, with new file for Portfolio css. Included general header css in main.css

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -3,11 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>TS Portfolio</title>
-    <link href="styles/main.css" rel="stylesheet">
+    <link href="../styles/main.css" rel="stylesheet">
+    <link href="../styles/portfolio.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Anaheim' rel='stylesheet'>
     <link>
   </head>
   <body>
+    <nav>
+      <a href="../index.html">torshimizu</a>
+      <a href="about.html">Deskription/About</a>
+      <a href="Portfolio.html">Impieso/Projects</a>
+      <a href="code-journal.html">Eskritura/Journal</a>
+    </nav>
+
+    <main>
+      <header>
+        <h1>Recent Projects</h1>
+      </header>
+
+    </main>
+
 
   </body>
 </html>
