--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
       <a href="index.html">torshimizu</a>
       <a href="html/about.html">Deskription/About</a>
-      <a href="https://github.com/torshimizu">Impieso/Projects</a>
+      <a href="html/Portfolio.html">Impieso/Projects</a>
       <a href="html/code-journal.html">Eskritura/Journal</a>
     </nav>
 
