moved nav css from portfolio.css to main.css so as to have code be reused in other pages. main nav now has id to syle differently

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -19,6 +19,7 @@
     <main>
       <header>
         <h1>Recent Projects</h1>
+        <sub>Descriptions and links to project repo.</sub>
       </header>
 
     </main>
