--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <nav>
+    <nav id="main-nav">
       <a href="index.html">torshimizu</a>
       <a href="html/about.html">Deskription/About</a>
       <a href="html/Portfolio.html">Impieso/Projects</a>
