added content to portfolio.html and some stylings for main article section

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -6,7 +6,7 @@
     <link href="../styles/main.css" rel="stylesheet">
     <link href="../styles/portfolio.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Anaheim' rel='stylesheet'>
-    <link>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:700" rel="stylesheet">
   </head>
   <body>
     <nav>
@@ -18,10 +18,26 @@
 
     <main>
       <header>
-        <h1>Recent Projects</h1>
-        <sub>Descriptions and links to project repo.</sub>
+        <div>
+          <h1>Recent Projects</h1>
+          <sub>Descriptions and links to project repo</sub>
+        </div>
       </header>
 
+      <article>
+        <section>
+          <h3>Hotel</h3>
+          <sub>Ruby</sub>
+          <p>A room booking system for a small hotel.</p>
+        </section>
+
+        <section>
+          <h3>Scrabble</h3>
+          <sub>Ruby</sub>
+          <p>Game logic for Scrabble! Includes a CLI with print-out of game board.</p>
+        </section>
+        
+      </article>
     </main>
 
 
