--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link href="styles/main.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Anaheim' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:700" rel="stylesheet">
+
   </head>
 
   <body>
