added project content to portfolio tab, added css for content

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </header>
 
       <article>
-        <p>&lt;What is Chamorro?&gt;</p>
+        <h4>&lt;What is Chamorro?&gt;</h4>
         <p>Chamorro is the name of the native people of <span>Guam</span>. It is also the the native language of the island. However, Chamorro is a dying l</p>
       </article>
 
