--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -26,17 +26,29 @@
 
       <article>
         <section>
-          <h3>Hotel</h3>
-          <sub>Ruby</sub>
+          <h3><a href="https://github.com/torshimizu/Startrly">Startrly</a></h3>
+          <sub>[HTML/CSS]</sub>
+          <p>Mock static website for a new company.</p>
+        </section>
+
+        <section>
+          <h3><a href="https://github.com/torshimizu/hotel">Hotel</a></h3>
+          <sub>[Ruby]</sub>
           <p>A room booking system for a small hotel.</p>
         </section>
 
         <section>
-          <h3>Scrabble</h3>
-          <sub>Ruby</sub>
+          <h3><a href="https://github.com/torshimizu/scrabble">Scrabble</a></h3>
+          <sub>[Ruby]</sub>
           <p>Game logic for Scrabble! Includes a CLI with print-out of game board.</p>
         </section>
-        
+
+        <section>
+          <h3><a href="https://github.com/torshimizu/Solar-System">Solar System</a></h3>
+          <sub>[Ruby]</sub>
+          <p>Interactive Solar System Viewer with CLI to view planet information.</p>
+        </section>
+
       </article>
     </main>
 
