changed nav journal to hobbies

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -13,7 +13,7 @@
       <a href="../index.html">torshimizu</a>
       <a href="about.html">Deskription/About</a>
       <a href="Portfolio.html">Impieso/Projects</a>
-      <a href="code-journal.html">Eskritura/Journal</a>
+      <a href="html/hobbies.html">Bisiu/Hobbies</a>
     </nav>
 
     <main>
