--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="index.html">torshimizu</a>
       <a href="html/about.html">Deskription/About</a>
       <a href="html/Portfolio.html">Impieso/Projects</a>
-      <a href="html/code-journal.html">Eskritura/Journal</a>
+      <a href="html/hobbies.html">Bisiu/Hobbies</a>
     </nav>
 
 
