--- a/html/about.html
+++ b/html/about.html
@@ -2,30 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>About TS</title>
-    <link href="../styles/style.css" rel="stylesheet">
+    <title>TS About</title>
+    <link href="../styles/main.css" rel="stylesheet">
     <link href="../styles/about.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Anaheim' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:700" rel="stylesheet">
   </head>
   <body>
-    <nav id="about-navbar">
-      <a href=./index.html><img src="../images/web_hi_res_512.png" alt="house icon"></a>
-      <div id="menu-about">
-        <a href="./about.html">Deskription</a>
-        <a href="./about.html">About</a>
-      </div>
-      <a href="./portfolio.html">Impieso/Projects</a>
-      <a href="./code-journal.html">Eskritura/Journal</a>
-      <a href="./contact.html">Agangi/Contact</a>
-      <script>
-
-      </script>
+    <nav>
+      <a href="../index.html">torshimizu</a>
+      <a href="about.html">Deskription/About</a>
+      <a href="Portfolio.html">Impieso/Projects</a>
+      <a href="html/hobbies.html">Bisiu/Hobbies</a>
     </nav>
 
-    <header>
-      <h1>A Chamorro Full Stack Software Developer</h1>
-      <img src="/Users/torshimizu/Documents/ada/torshimizu.github.io/images/ts-climbing-leaven.jpg" alt="person rock climbing">
-    </header>
+
 
   </body>
 </html>
