added starter code and content for about page

--- a/html/about.html
+++ b/html/about.html
@@ -11,11 +11,21 @@
   <body>
     <nav>
       <a href="../index.html">torshimizu</a>
-      <a href="about.html">Deskription/About</a>
-      <a href="Portfolio.html">Impieso/Projects</a>
+      <a href="html/about.html">Deskription/About</a>
+      <a href="html/Portfolio.html">Impieso/Projects</a>
       <a href="html/hobbies.html">Bisiu/Hobbies</a>
     </nav>
 
+    <header>
+      <img src="../images/tor-w-turtle.jpg" alt="person holding a small turtle">
+      <p>
+        I am a biologist turned software developer, currently attending <a href="https://www.adadevelopersacademy.org/">Ada Developers Academy</a>.
+
+      </p>
+      <p>
+        I was born and raised on <span>Guam<span>, but have lived in Seattle since 2009.
+      </p>
+    </header>
 
 
   </body>
