updated links for navbar

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -12,8 +12,8 @@
     <nav>
       <a href="../index.html">torshimizu</a>
       <a href="about.html">Deskription/About</a>
-      <a href="Portfolio.html">Impieso/Projects</a>
-      <a href="html/hobbies.html">Bisiu/Hobbies</a>
+      <a href="portfolio.html">Impieso/Projects</a>
+      <a href="hobbies.html">Bisiu/Hobbies</a>
     </nav>
 
     <main>
