--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav id="main-nav">
       <a href="index.html">torshimizu</a>
       <a href="html/about.html">Deskription/About</a>
-      <a href="html/Portfolio.html">Impieso/Projects</a>
+      <a href="html/portfolio.html">Impieso/Projects</a>
       <a href="html/hobbies.html">Bisiu/Hobbies</a>
     </nav>
 
