--- a/html/about.html
+++ b/html/about.html
@@ -11,9 +11,9 @@
   <body>
     <nav>
       <a href="../index.html">torshimizu</a>
-      <a href="html/about.html">Deskription/About</a>
-      <a href="html/Portfolio.html">Impieso/Projects</a>
-      <a href="html/hobbies.html">Bisiu/Hobbies</a>
+      <a href="about.html">Deskription/About</a>
+      <a href="portfolio.html">Impieso/Projects</a>
+      <a href="hobbies.html">Bisiu/Hobbies</a>
     </nav>
 
     <header>
