updated nav bar css to account for screen size

--- a/html/about.html
+++ b/html/about.html
@@ -17,7 +17,7 @@
     </nav>
 
     <header>
-      <img src="../images/tor-w-turtle.jpg" alt="person holding a small turtle">
+      <img src="../images/ts-vegas.jpg" alt="person sitting on a boulder">
       <p>
         I am a biologist turned software developer, currently attending <a href="https://www.adadevelopersacademy.org/">Ada Developers Academy</a>.
 
