added code and content for hobbies. still working on dropdown for lists

--- a/html/hobbies.html
+++ b/html/hobbies.html
@@ -15,5 +15,30 @@
       <a href="portfolio.html">Impieso/Projects</a>
       <a href="hobbies.html">Bisiu/Hobbies</a>
     </nav>
+
+    <article>
+      <section id="sports">
+        <div>
+          <h3>Sports</h3>
+          <div>
+            <p>Rock Climbing</p>
+            <p>Soccer</p>
+          </ul>
+        </div>
+      </section>
+
+      <section id="beer">
+        <h3>Beer?</h3>
+      </section>
+
+      <section id="crafts">
+        <h3>Crafts?</h3>
+      </section>
+
+      <section id="dogs">
+        <h3>Dogs!</h3>
+      </section>
+
+    </article>
   </body>
 </html>
