hover dropdown menu css and content for #sports

--- a/html/hobbies.html
+++ b/html/hobbies.html
@@ -21,8 +21,9 @@
         <div>
           <h3>Sports</h3>
           <div>
-            <p>Rock Climbing</p>
-            <p>Soccer</p>
+            <a>Rock Climbing</a>
+            <a>Soccer</a>
+            <a>Rugby</a>
           </ul>
         </div>
       </section>
