added images for hobby page

--- a/html/about.html
+++ b/html/about.html
@@ -19,11 +19,11 @@
     <header>
       <img src="../images/ts-vegas.jpg" alt="person sitting on a boulder">
       <p>
-        I am a biologist turned software developer, currently attending <a href="https://www.adadevelopersacademy.org/">Ada Developers Academy</a>.
+        Biologist turned software developer, currently attending <a href="https://www.adadevelopersacademy.org/">Ada Developers Academy</a>.
 
       </p>
       <p>
-        I was born and raised on <span>Guam<span>, but have lived in Seattle since 2009.
+        Born and raised on <span>Guam<span>, but have lived in Seattle since 2009.
       </p>
     </header>
 
