--- a/html/hobbies.html
+++ b/html/hobbies.html
@@ -29,15 +29,37 @@
       </section>
 
       <section id="beer">
-        <h3>Beer?</h3>
+        <div>
+          <h3>Favorite Beers</h3>
+          <div>
+            <a>Wild Ride Brew Nut Crusher</a>
+            <a>Georgetown Bodhizafa</a>
+            <a>Elysian Superfuzz</a>
+            <a>Elysian Jasmine IPA</a>
+          </div>
+        </div>
       </section>
 
       <section id="crafts">
-        <h3>Crafts?</h3>
+        <div>
+          <h3>Crafts</h3>
+          <div>
+            <a>Yarn</a>
+            <a>Wire</a>
+            <a>Poetry</a>
+          <div>
+        </div>
       </section>
 
       <section id="dogs">
-        <h3>Dogs!</h3>
+        <div>
+          <h3>Dogs</h3>
+          <div>
+            <a>Roo and Taco</a>
+            <br>
+            <br>
+          </div>
+        </div>
       </section>
 
     </article>
