--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
 
     <main class="container">
-
       <header id="splat">
         <h1 class="animated fadeIn">Tor Shimizu</h1>
         <sub>A Chamorro full stack developer</sub>
@@ -44,30 +43,17 @@
           <li>Filling!</li>
         </ul>
       </article>
-
-        <br>
-
-        <p>
-          Any Give Sunday baby. Maybe I’m just a bad girl. Well let me ask one thing. When nothing's right. Say, I don’t have self esteem but it's my passion. You woulda thought I needed help from this feeling that I felt. Let it ride and party. Now look how you do, uh. With all that yadi ya. (1409607566242). Cause I did not return your page, well. When you go broke. Look in my eyes covered in Maybelline. Maybe I’m just a bad girl. I was there when everything had changed
-        </p>
-
-        <br>
-
-        <p>
-          My Fourth paragraph!
-        </p>
-    </article>
+    </main>
 
     <footer id="footer">
       <article>
-        <div id = "about">
-          <h3>About</h3>
-          <div id = "about-blocks">
+        <h3>About</h3>
+        <div id = "about-blocks">
           <p>Full stack software developer in training.</p>
           <p>Guammie Bear. Climber. Beer enthusiast. Jockiest nerd you'll ever meet.</p>
-          </div>
         </div>
       </article>
     </footer>
+
   </body>
 </html>
