added contact links and reformatted about section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </article>
 
       <section id="bg2">
-        <span>What's it like growing up on Guam?</span>
+        <span>I don't know what to put here!</span>
       </section>
 
       <article>
@@ -45,14 +45,25 @@
       </article>
     </main>
 
-    <footer id="footer">
-      <article>
-        <h3>About</h3>
-        <div id = "about-blocks">
+    <footer>
+      <section>
+        <h2>About</h2>
+        <div>
           <p>Full stack software developer in training.</p>
           <p>Guammie Bear. Climber. Beer enthusiast. Jockiest nerd you'll ever meet.</p>
         </div>
-      </article>
+      </section>
+
+      <section>
+        <h2>Contact</h2>
+        <div>
+          <a href="mailto:torshimizu@gmail.com">Email</a>
+          <a href="https://www.linkedin.com/in/torshimizu/">LinkedIn</a>
+          <a href="https://twitter.com/cham_burrito">Twitter</a>
+          <a href="https://www.instagram.com/torrannosaurus/">Instagram</a>
+        </div>
+      <section>
+
     </footer>
 
   </body>
