updated about section on the main page, removed an unecessary section, changed order of navbar

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <body>
     <nav id="main-nav">
       <a href="index.html">torshimizu</a>
-      <a href="html/about.html">Deskription/About</a>
       <a href="html/portfolio.html">Impieso/Projects</a>
       <a href="html/hobbies.html">Bisiu/Hobbies</a>
+      <a href="html/about.html">Deskription/About</a>
     </nav>
 
 
@@ -27,44 +27,33 @@
 
       <article>
         <h4>&lt;What is Chamorro?&gt;</h4>
-        <p>Chamorro is the name of the native people of <span>Guam</span>. It is also the the native language of the island. However, Chamorro is a dying l</p>
+        <p>Chamorro is the name of the native people of <span>Guam</span>. It is also the the native language of the island.</p>
       </article>
 
-      <section id="bg2">
-        <span>I don't know what to put here!</span>
-      </section>
+      <section id="bg2"></section>
 
-      <article>
-        <ul>
-          <li>Stifling</li>
-          <li>...but relaxing</li>
-          <li>Sports-heavy</li>
-          <li>Family-orineted</li>
-          <li>Filling!</li>
-        </ul>
-      </article>
+      <footer>
+        <section>
+          <h2>About</h2>
+          <div>
+            <p>Full stack software developer in training.</p>
+            <p>Guammie Bear. Climber. Beer enthusiast. Jockiest nerd you'll ever meet.</p>
+          </div>
+        </section>
+
+        <section id="contact">
+          <h2>Contact</h2>
+          <div>
+            <a href="mailto:torshimizu@gmail.com">Email</a>
+            <a href="https://www.linkedin.com/in/torshimizu/" target="_blank">LinkedIn</a>
+            <a href="https://twitter.com/cham_burrito" target="_blank">Twitter</a>
+            <a href="https://www.instagram.com/torrannosaurus/" target="_blank">Instagram</a>
+          </div>
+          <section>
+
+          </footer>
     </main>
 
-    <footer>
-      <section>
-        <h2>About</h2>
-        <div>
-          <p>Full stack software developer in training.</p>
-          <p>Guammie Bear. Climber. Beer enthusiast. Jockiest nerd you'll ever meet.</p>
-        </div>
-      </section>
-
-      <section>
-        <h2>Contact</h2>
-        <div>
-          <a href="mailto:torshimizu@gmail.com">Email</a>
-          <a href="https://www.linkedin.com/in/torshimizu/">LinkedIn</a>
-          <a href="https://twitter.com/cham_burrito">Twitter</a>
-          <a href="https://www.instagram.com/torrannosaurus/">Instagram</a>
-        </div>
-      <section>
-
-    </footer>
 
   </body>
 </html>
