--- a/html/about.html
+++ b/html/about.html
@@ -11,15 +11,15 @@
   <body>
     <nav>
       <a href="../index.html">torshimizu</a>
-      <a href="about.html">Deskription/About</a>
       <a href="portfolio.html">Impieso/Projects</a>
       <a href="hobbies.html">Bisiu/Hobbies</a>
+      <a href="about.html">Deskription/About</a>
     </nav>
 
     <header>
       <img src="../images/ts-vegas.jpg" alt="person sitting on a boulder">
       <p>
-        Biologist turned software developer, currently attending <a href="https://www.adadevelopersacademy.org/">Ada Developers Academy</a>.
+        Biologist turned software developer, currently attending <a href="https://www.adadevelopersacademy.org/" target="_blank">Ada Developers Academy</a>.
 
       </p>
       <p>
