resized hobby images

--- a/html/about.html
+++ b/html/about.html
@@ -19,8 +19,7 @@
     <header>
       <img src="../images/ts-vegas.jpg" alt="person sitting on a boulder">
       <p>
-        Biologist turned software developer, currently attending <a href="https://www.adadevelopersacademy.org/" target="_blank">Ada Developers Academy</a>.
-
+        Biologist turned software developer, currently attending <a href="https://www.adadevelopersacademy.org/" target="_blank">Ada Developers Academy</a> [Cohort9].
       </p>
       <p>
         Born and raised on <span>Guam<span>, but have lived in Seattle since 2009.
