updated header styles for hobbies quadrants

--- a/html/hobbies.html
+++ b/html/hobbies.html
@@ -55,9 +55,8 @@
         <div>
           <h3>Dogs</h3>
           <div>
-            <a>Roo and Taco</a>
-            <br>
-            <br>
+            <a href="../dog-blog/roo.html" target="_blank">Roo</a>
+            <a href="../dog-blog/taco.html" target="_blank">Taco</a>
           </div>
         </div>
       </section>
