added more projects to portfolio

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -26,6 +26,22 @@
 
       <article>
         <section>
+          <h3>
+            <a href="https://github.com/torshimizu/hotel-rails">Hotel on Rails</a>
+          </h3>
+          <sub>[Rails]</sub>
+          <p>Ada Hotel project built with Rails!</p>
+        </section>
+
+        <section>
+          <h3>
+            <a href="https://github.com/torshimizu/TaskList">Task List</a>
+          </h3>
+          <sub>[Rails]</sub>
+          <p>A minimal task list app</p>
+        </section>
+
+        <section>
           <h3><a href="https://github.com/torshimizu/Startrly">Startrly</a></h3>
           <sub>[HTML/CSS]</sub>
           <p>Mock static website for a new company.</p>
